--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap"
       rel="stylesheet"
@@ -28,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>WA Synth</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
