--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rajdhani&family=Share+Tech+Mono&family=VT323&display=swap"
+      rel="stylesheet"
+    />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap"
