--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -13,7 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Rajdhani&family=Share+Tech+Mono&family=VT323&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Geostar+Fill&family=Rajdhani&family=Rubik+80s+Fade&family=Rubik+Iso&family=Share+Tech+Mono&family=VT323&family=Wallpoet&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap"
       rel="stylesheet"
